# cmake-testing

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
